- [ADR-114] Add support for multiple IEditService
- [ADR-115] Split the Sirius Web frontend
- [ADR-116] Add support for changing the content of the explorer
- [ADR-117] Add support for changing the content of the details view
- [ADR-118] Use dynamic handles to connect edges between nodes
- [ADR-119] Share layout data between subscribers
- [ADR-120] Improve the arrange all action with reactflow

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-web/issues/2386[#2386] [form] Reference widget structure has changed, `referenceOptions` has been removed to be lazily loaded.
- https://github.com/eclipse-sirius/sirius-web/issues/2329[#2335] [form] The general mutation `editReference` has been removed from the reference widget. This mutation has been replaced by finer grain mutations:
** _clearReference_ mutation: to reset the content references (set the value to `null` for mono-valued references and to an empty list for multi-valued ones).
** _addReferenceValues_ mutation: to several reference values to a reference (only used with multi-valued references)
** _setReferenceValue_ mutation: to set the value of mono-valued references
** _removeReferenceValue_ mutation: to remove a given value from a reference (in case of mono-valued references, this mutation is equivalent to _clearReference_)
** _createElementInReference_ mutation: to create a new element (used in the context of a reference widget)
** _moveReferenceValue_ mutation: to reorder the list of values in multi-valued references

UI is unchanged except that we removed the transactional behavior of the _TransferModal_ component which is now performing operations live. This means that changes are no longer done when the modal is close (using the _Apply_ button) but as soon as the user interacts with elements (adding or removing values, changing order).

- https://github.com/eclipse-sirius/sirius-web/issues/2269[#2269] [core] The GraphQL field `EditingContext#domains` has been modified.